--- a/frontend/src/components/section/Section.module.css
+++ b/frontend/src/components/section/Section.module.css
@@ -50,6 +50,14 @@
     line-height: 1.4;
 }
 
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .sectionContainer {
+        margin-top: 0px;
+    }
+    
+}
+
 @media (max-width: 768px) {
 
     .sectionContainer {
