--- a/frontend/src/components/header/Header.module.css
+++ b/frontend/src/components/header/Header.module.css
@@ -1,12 +1,19 @@
 .header {
-    background-color: #000000;
-    color: white;
-    height: 80px;
-    padding: 0 70px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #000000;
+  color: white;
+  height: 80px;
+  padding: 0 70px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 1000; /* Mantém o header sobre outros elementos */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Opcional: adiciona uma sombra para destaque */
+}
+
   
   .left {
     display: flex;
