--- a/frontend/src/components/page/Toolbox.module.css
+++ b/frontend/src/components/page/Toolbox.module.css
@@ -1,6 +1,4 @@
-/* src/components/page/Toolbox.css */
-
-.toolbox-container {
+.toolboxContainer {
   border: 1px solid #ddd;
   padding: 10px;
   margin-bottom: 20px;
@@ -8,14 +6,15 @@
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
-  align-items: center;
+  justify-content: center;
   background-color: #f1f1f1;
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 2;
+  width: 100%;
 }
 
-.toolbox-item {
+.toolboxItem {
   cursor: grab;
   padding: 10px;
   border: 1px solid #ccc;
@@ -23,34 +22,35 @@
   user-select: none;
   background-color: #fff;
   font-size: 14px;
+  align-items: center;
 }
 
-.toolbox-item-circle {
+.toolboxItemCircle {
   border-radius: 50%;
 }
 
-.toolbox-item-triangle {
+.toolboxItemTriangle {
   clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
 }
 
-.toolbox-icons {
+.toolboxIcons {
   display: flex;
   gap: 10px;
 }
 
-.toolbox-icon {
+.toolboxIcon {
   width: 40px;
   height: 40px;
   cursor: grab;
 }
 
-.color-input {
+.colorInput {
   cursor: pointer;
   padding: 5px;
   border: none;
 }
 
-.upload-image-button {
+.uploadImageButton {
   padding: 10px;
   cursor: pointer;
   border: 1px solid #ccc;
@@ -59,7 +59,7 @@
   font-size: 14px;
 }
 
-.generate-pdf-button {
+.generatePdfButton {
   padding: 10px;
   cursor: pointer;
   border: 1px solid #28a745;
@@ -69,6 +69,11 @@
   font-size: 14px;
 }
 
-.generate-pdf-button:hover {
+.generatePdfButton:hover {
   background-color: #1e7e34;
+}
+
+.textListItem {
+  position: relative;
+  margin-bottom: 20px;
 }
