--- a/frontend/src/components/page/DocumentEditor.module.css
+++ b/frontend/src/components/page/DocumentEditor.module.css
@@ -117,5 +117,104 @@
   flex-direction: column;
   height: 100%;
   overflow-y: auto;
-  padding: 20px;
+  padding: 40px;
+  background-color: #ffffff;
+}
+
+.tabButtons {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
+  margin-top: 130px;
+}
+
+.tabButton {
+  padding: 10px 20px;
+  cursor: pointer;
+  border: 1px solid #007bff;
+  border-radius: 4px;
+  background-color: #ffffff;
+  color: #007bff;
+  transition: background-color 0.3s, color 0.3s, transform 0.2s;
+  font-size: 16px;
+}
+
+.tabButton:hover {
+  background-color: #007bff;
+  color: #ffffff;
+}
+
+.tabButton:active {
+  transform: scale(0.95);
+}
+
+.activeTab {
+  background-color: #007bff;
+  color: #ffffff;
+}
+
+/* Estilos para o conteúdo das abas */
+.tabContent {
+  flex: 1;
+  overflow-y: auto;
+}
+
+.cadastroContent {
+  font-size: 18px;
+  color: #333333;
+}
+
+/* Adicionando responsividade para dispositivos móveis */
+@media (max-width: 768px) {
+  .mainContent {
+    flex-direction: column;
+    gap: 10px; /* Reduzir o espaçamento entre os painéis em mobile */
+    padding: 10px; /* Adicionar padding se necessário */
+  }
+
+  .leftPanel, .rightPanel {
+    flex: none;
+    width: 100%;
+    padding: 10px; /* Ajustar padding para mobile */
+  }
+
+  .pagesContainer {
+    margin-top: 20px; /* Reduzir margem no mobile */
+    padding: 10px; /* Ajustar padding para mobile */
+  }
+
+  .pageWrapper {
+    margin: 10px 0;
+    padding: 5px;
+  }
+
+  .addPageButton {
+    width: 100%;
+    padding: 8px 16px;
+    font-size: 14px;
+  }
+
+  .duplicatePageButton, .deletePageButton {
+    padding: 4px 8px;
+    font-size: 12px;
+  }
+
+  .tabButtons {
+    flex-direction: column;
+    gap: 5px;
+    margin-top: 20px; /* Ajustar margem para mobile */
+  }
+
+  .tabButton {
+    width: 100%;
+    text-align: center;
+  }
+
+  .rightPanel {
+    padding: 20px; /* Ajustar padding para mobile */
+  }
+
+  .cadastroContent {
+    font-size: 16px;
+  }
 }
