--- a/frontend/src/app/admin/admin.module.css
+++ b/frontend/src/app/admin/admin.module.css
@@ -12,16 +12,19 @@
 .buttonGroup {
   display: flex;
   gap: 20px;
+  width: 100%;
+  height: 100%;
 }
 
 .button {
-  padding: 16px 35px;
+  padding: 16px 90px;
   background-color: #45C907;
   color: #000000;
   border-radius: 8px;
   text-decoration: none;
   font-weight: bold;
   font-size: 16px;
+  width: 100%;
 }
 
 .button:hover {
