--- a/frontend/src/app/cart/payment/payment.module.css
+++ b/frontend/src/app/cart/payment/payment.module.css
@@ -62,6 +62,56 @@
     margin-bottom: 10px;
     font-weight: bold;
   }
+
+
+  .sectionTitle {
+    margin-bottom: 30px;
+  }
+
+
+  .packageCard {
+    display: flex;
+    align-items: center;
+    background-color: #D2D2D2;
+    padding: 20px;
+    margin-bottom: 20px;
+    position: relative;
+    border-radius: 9px;
+  }
+  
+  .packageImage {
+    width: 100px;
+    height: 140px;
+    object-fit: cover;
+    margin-right: 20px;
+  }
+  
+  .packageInfo {
+    flex: 1;
+  }
+  
+  .packageTitle {
+    font-size: 22px;
+    margin-bottom: 10px;
+  }
+  
+  .packagePrice {
+    font-size: 26px;
+    color: #000;
+    margin-bottom: 10px;
+    font-weight: bold;
+  }
+  
+  .packageDescription {
+    font-size: 18px;
+    color: #666;
+    font-weight: bold;
+  }
+  
+
+
+
+
   
   .access {
     font-size: 18px;
